--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   carousel_slider: ^5.0.0
   timeago: ^3.7.1
+  flutter_bloc: ^9.1.1
 
 
 dev_dependencies:
@@ -80,12 +81,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Tuffy
+    - family: Inter
       fonts:
-        - asset: assets\fonts\Tuffy-Regular.ttf
-        - asset: assets\fonts\Tuffy-Italic.ttf
-          style: italic
-          weight: 100
+        - asset: assets\fonts\Inter-VariableFont_opsz,wght.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
