--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets\images\Vector (1).png
-    - assets\images\Group 195.png
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
